# django_test

./: .gitignore  pyproject.toml  requirements.txt
blog/: models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templates/blog/includes/: inc_header.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/management/commands/: update_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_product_views_count_alter_product_description_and_more.py  0006_version.py  0007_alter_version_options.py
catalog/templates/: add_product.html  base.html  contacts.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_header.html  inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
congig/: asgi.py  settings.py  urls.py  wsgi.py
