[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"
ipython = "^8.26.0"
pillow = "^10.4.0"
chardet = "^5.2.0"
python-decouple = "^3.8"
pytils = "^0.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
